--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,7 @@ _documents
 _private
 _downloads
 logs
-nikki/_private
-nikki/nikki_beta.py
-nikki/models
+_unusedVersions
 
 __pycache__
 models/_transformers
